@@ -1,4 +1,6 @@
 Release 1.1.3:
+  - JMTable can now have a different renderer/editor per row/column 
+    (Standard swing can only handle 1 renderer/editor per column)
   - Removed 'include defaultFilter' and replaced it with importfilter.
     It is now possible to have 'filters in filters'
   - BUG: JMeld didn't remember position of it's frame
